--- a/style.css
+++ b/style.css
@@ -23,13 +23,16 @@ div{
     grid-template-rows: repeat(7, 1fr);
     padding: 20px;
 }
-p{
+input{
     font-size: 48px;
     grid-column: 1/5;
     grid-row: 1/3;
     text-align: right;
-    display: grid;
-    align-items: end;
+    background-color: #17181A;
+    border: none;
+    outline: none;
+    text-align: right;
+    padding-top: 50px ;
 }
 button{
     font-size: 24px;
